--- a/Bluetooth4_3/res/values/strings.xml
+++ b/Bluetooth4_3/res/values/strings.xml
@@ -17,18 +17,19 @@
     <string name="app_name">OTRead</string>
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="label_data">油温:</string>
-    <string name="label_device_address">Device Address: </string>
+    <string name="label_device_address">设备地址: </string>
     <string name="label_state">状态:</string>
-    <string name="no_data">No data</string>
+    <string name="no_data"> -- DegC </string>
     <string name="connected">连接成功</string>
     <string name="disconnected">断开连接</string>
-    <string name="title_devices">BLE Device Scan</string>
+    <string name="title_devices">扫描设备</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
+    <string name="DegreeUnit">DegC</string>
 
     <string name="unknown_device">Unknown device</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
     <string name="unknown_service">Unknown service</string>
-
+    
     <!-- Menu items -->
     <string name="menu_connect">Connect</string>
     <string name="menu_disconnect">Disconnect</string>
